--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -764,9 +764,18 @@
                         var oo_1 = orgsList[a.id];
                         var oo_2 = orgsList[b.id];
                         if (oo_1 && oo_2) {
-                            if (oo_1.children.length > 0 && oo_2.children.length > 0) return 0;
-                            if (oo_1.children.length > 0 && oo_2.children.length == 0) return -1;
-                            if (oo_2.children.length > 0 && oo_1.children.length == 0) return 1;
+                            if (oo_1.children.length > 0 && oo_2.children.length > 0) {
+                                if (a.name < b.name) return -1;
+                                if (a.name > b.name) return 1;
+                                return 0;
+                            }
+                            else if (oo_1.children.length > 0 && oo_2.children.length == 0) return -1;
+                            else if (oo_2.children.length > 0 && oo_1.children.length == 0) return 1;
+                            else {
+                                if (a.name < b.name) return -1;
+                                if (a.name > b.name) return 1;
+                                return 0;
+                            };
                         } else return 0;
                     });
 
