--- a/portal/exercise_diet/templates/exercise_diet/diet.html
+++ b/portal/exercise_diet/templates/exercise_diet/diet.html
@@ -11,12 +11,24 @@
         <div class="modal fade" id={{ id }} aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="modal-body">
-                        {{ content|safe }}
+					<div class="modal-body">
+                        <button type="button" class="btn btn-secondary-top" data-dismiss="modal"><b>close</b><span>X</span></button>
+                        {{ content[2]|safe }}
                     </div>
+                    {% if content[1] > 0 %}
+                    <div class="modal-nav">
+                        <span>
+                            {% if (loop.previtem is defined) and (loop.previtem[1][1] > 0) %}<a href="javascript:show_diet('{{ loop.previtem[0] }}','{{ id }}');">{{ loop.previtem[1][0]|safe }}</a>{% endif %}
+                        </span>
+                        &nbsp;|&nbsp;
+                        <span>
+                            {% if (loop.nextitem is defined) and (loop.nextitem[1][1] > 0) %}<a href="javascript:show_diet('{{ loop.nextitem[0] }}','{{ id }}');">{{ loop.nextitem[1][0]|safe }}</a>{% endif %}
+                        </span>
+                    </div>
+                    {% endif %}
                     <div class="modal-footer">
                         {% trans %}
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><b>close</b><span>X</span></button>
                         {% endtrans %}
                     </div>
                 </div>
@@ -26,6 +38,15 @@
     {% endfor %}
 
     <script type="text/javascript">
+
+        function show_diet(new_item, current_item) {
+            $('#'+new_item).on('shown.bs.modal', function(e) {
+                $('body').addClass('modal-open');
+            })
+
+            $('#'+current_item).modal('hide');
+            $('#'+new_item).modal('show');
+        }
 
         $(function(){
 
