--- a/portal/exercise_diet/templates/exercise_diet/recipes.html
+++ b/portal/exercise_diet/templates/exercise_diet/recipes.html
@@ -1,114 +1,123 @@
 {% extends 'exercise_diet/layout.html' %}
 
 {% block body %}
-    <div>
-        <p>{% trans %}Even when you know which foods the experts recommend, it’s not always easy to add them to your diet. These recipes and shopping tips give you ideas for how to buy, store, and prepare Foods to Choose.{% endtrans %}</p>
-    </div>
-    <div>
-        <h4>
-            <a data-toggle="collapse" href="#healthy-fats" aria-expanded="false" class="collapsed" aria-controls="healthy-fats">{% trans %}Healthy Fats from Oils and Nuts{% endtrans %}</a>
-        </h4>
-    </div>
-    <div id="healthy-fats" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
-        <table>
-            <tr>
-            {% for asset in recipe_assets['healthy_vegetable_fat'] %}
-                <td>
-                    <a href="javascript:show_recipe('healthy_vegetable_fat','{{ loop.index0 }}');">{{ asset[0]|safe }}</a>
-                </td>
-                {% if loop.index % 3 == 0 %}
-                    </tr><tr>
-                {% endif %}
-            {% endfor %}
-        </table>
-    </div>
+    {{ recipe_intro|safe }}
+    <div id="Recipe-Accordions">
+        <div class="healthy-fats-accordion">
+            <h4>
+                <a data-toggle="collapse" href="#healthy-fats" aria-expanded="false" class="collapsed" aria-controls="healthy-fats">{% trans %}Healthy Fats from Oils and Nuts{% endtrans %}</a>
+            </h4>
+        </div>
+        <div id="healthy-fats" class="collapse" role="tabpanel" aria-labelledby="heading1" style="height: 0px;">
+            <table>
+                <tbody>
+                    <tr>
+                    {% for asset in recipe_assets['healthy_vegetable_fat'] %}
+                        <td>
+                            <a href="javascript:show_recipe('healthy_vegetable_fat','{{ loop.index0 }}','{{ asset[2] }}');">{{ asset[0]|safe }}</a>
+                        </td>
+                        {% if loop.index % 3 == 0 %}
+                            </tr><tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div><!-- END class="healthy-fats-accordion" -->
 
-    <div>
-        <h4>
-            <a data-toggle="collapse" href="#vegetables" aria-expanded="false" class="collapsed" aria-controls="vegetables">{% trans %}Vegetables{% endtrans %}</a>
-        </h4>
-    </div>
-    <div id="vegetables" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
-        <table>
-            <tr>
-            {% for asset in recipe_assets['vegetables'] %}
-                <td>
-                    <a href="javascript:show_recipe('vegetables','{{ loop.index0 }}');">{{ asset[0]|safe }}</a>
-                </td>
-                {% if loop.index % 3 == 0 %}
-                    </tr><tr>
-                {% endif %}
-            {% endfor %}
-        </table>
-    </div>
+        <div class="vegetables-accordion">
+            <h4>
+                <a data-toggle="collapse" href="#vegetables" aria-expanded="false" class="collapsed" aria-controls="vegetables">{% trans %}Vegetables{% endtrans %}</a>
+            </h4>
+        </div>
+        <div id="vegetables" class="collapse" role="tabpanel" aria-labelledby="heading1" style="height: 0px;">
+            <table>
+                <tbody>
+                    <tr>
+                    {% for asset in recipe_assets['vegetables'] %}
+                        <td>
+                            <a href="javascript:show_recipe('vegetables','{{ loop.index0 }}','{{ asset[2] }}');">{{ asset[0]|safe }}</a>
+                        </td>
+                        {% if loop.index % 3 == 0 %}
+                            </tr><tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div><!-- END class="vegetables-accordion" -->
 
-    <div>
-        <h4>
-            <a data-toggle="collapse" href="#tomatoes" aria-expanded="false" class="collapsed" aria-controls="tomatoes">{% trans %}Cooked tomatoes{% endtrans %}</a>
-        </h4>
-    </div>
-    <div id="tomatoes" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
-        <table>
-            <tr>
-            {% for asset in recipe_assets['tomatoes'] %}
-                <td>
-                    <a href="javascript:show_recipe('tomatoes','{{ loop.index0 }}');">{{ asset[0]|safe }}</a>
-                </td>
-                {% if loop.index % 3 == 0 %}
-                    </tr><tr>
-                {% endif %}
-            {% endfor %}
-        </table>
-    </div>
+        <div class="tomatoes-accordion">
+            <h4>
+                <a data-toggle="collapse" href="#tomatoes" aria-expanded="false" class="collapsed" aria-controls="tomatoes">{% trans %}Cooked tomatoes{% endtrans %}</a>
+            </h4>
+        </div>
+        <div id="tomatoes" class="collapse" role="tabpanel" aria-labelledby="heading1" style="height: 0px;">
+            <table>
+                <tbody>
+                    <tr>
+                    {% for asset in recipe_assets['tomatoes'] %}
+                        <td>
+                            <a href="javascript:show_recipe('tomatoes','{{ loop.index0 }}','{{ asset[2] }}');">{{ asset[0]|safe }}</a>
+                        </td>
+                        {% if loop.index % 3 == 0 %}
+                            </tr><tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div><!-- END class="tomatoes-accordion" -->
 
-    <div>
-        <h4>
-            <a data-toggle="collapse" href="#fish" aria-expanded="false" class="collapsed" aria-controls="fish">{% trans %}Fish{% endtrans %}</a>
-        </h4>
-    </div>
-    <div id="fish" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
-        <table>
-            <tr>
-            {% for asset in recipe_assets['fish'] %}
-                <td>
-                    <a href="javascript:show_recipe('fish','{{ loop.index0 }}');">{{ asset[0]|safe }}</a>
-                </td>
-                {% if loop.index % 3 == 0 %}
-                    </tr><tr>
-                {% endif %}
-            {% endfor %}
-        </table>
-    </div>
+        <div class="fish-accordion">
+            <h4>
+                <a data-toggle="collapse" href="#fish" aria-expanded="false" class="collapsed" aria-controls="fish">{% trans %}Fish{% endtrans %}</a>
+            </h4>
+        </div>
+        <div id="fish" class="collapse" role="tabpanel" aria-labelledby="heading1" style="height: 0px;">
+            <table>
+                <tbody>
+                    <tr>
+                    {% for asset in recipe_assets['fish'] %}
+                        <td>
+                            <a href="javascript:show_recipe('fish','{{ loop.index0 }}','{{ asset[2] }}');">{{ asset[0]|safe }}</a>
+                        </td>
+                        {% if loop.index % 3 == 0 %}
+                            </tr><tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div><!-- END class="fish-accordion" -->
 
-    <div>
-        <h4>
-            <a data-toggle="collapse" href="#alternatives_to_processed_meats" aria-expanded="false" class="collapsed" aria-controls="alternatives_to_processed_meats">{% trans %}Alternatives to Processed Meats{% endtrans %}</a>
-        </h4>
-    </div>
-    <div id="alternatives_to_processed_meats" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
-        <table>
-            <tr>
-            {% for asset in recipe_assets['alternatives_to_processed_meats'] %}
-                <td>
-                    <a href="javascript:show_recipe('alternatives_to_processed_meats','{{ loop.index0 }}');">{{ asset[0]|safe }}</a>
-                </td>
-                {% if loop.index % 3 == 0 %}
-                    </tr><tr>
-                {% endif %}
-            {% endfor %}
-        </table>
-    </div>
-
+        <div class="alternatives-accordion">
+            <h4>
+                <a data-toggle="collapse" href="#alternatives_to_processed_meats" aria-expanded="false" class="collapsed" aria-controls="alternatives_to_processed_meats">{% trans %}Alternatives to Processed Meats{% endtrans %}</a>
+            </h4>
+        </div>
+        <div id="alternatives_to_processed_meats" class="collapse" role="tabpanel" aria-labelledby="heading1" style="height: 0px;">
+            <table>
+                <tbody>
+                    <tr>
+                    {% for asset in recipe_assets['alternatives_to_processed_meats'] %}
+                        <td>
+                            <a href="javascript:show_recipe('alternatives_to_processed_meats','{{ loop.index0 }}','{{ asset[2] }}');">{{ asset[0]|safe }}</a>
+                        </td>
+                        {% if loop.index % 3 == 0 %}
+                            </tr><tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div><!-- END class="alternatives-accordion" -->
+    </div><!-- END id="Recipe-Accordions"> -->
 
     <!-- Modal -->
     <div class="modal fade" id="recipe-modal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                {% trans %}<button type="button" class="btn btn-secondary-top" data-dismiss="modal"><span>close</span>X</button>{% endtrans %}
+                {% trans %}<button type="button" class="btn btn-secondary-top" data-dismiss="modal"><b>close</b><span>X</span></button>{% endtrans %}
                 <div class="modal-body">{% trans %}Loading...{% endtrans %}
                 </div>
                 <div class="modal-footer">
-                    {% trans %}<button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>{% endtrans %}
+                        {% trans %}<button type="button" class="btn btn-secondary" data-dismiss="modal"><b>close</b><span>X</span></button>{% endtrans %}
                 </div>
             </div>
         </div>
@@ -116,7 +125,13 @@
 
     <script type="text/javascript">
 
-        function show_recipe(heading, item) {
+        function show_recipe(heading, item, recipe_type) {
+            if (recipe_type == 'tip') {
+                $('#recipe-modal').addClass('tip');
+            }
+            else {
+                $('#recipe-modal').removeClass('tip');
+            }
             $('#recipe-modal').modal('show');
             $( ".modal-body" ).load( "/recipe/" + heading + "/" + item );
         }
