--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2117,7 +2117,7 @@
             tnthAjax.assessmentStatus({{person.id}}, function(data) {
                 if (!data.error) {
                     if (((data.assessment_status).toUpperCase() == "COMPLETED") &&
-                        (! data.outstanding_indefinte_work)) {
+                        (parseInt(data.outstanding_indefinite_work) === 0)) {
                         $("#assessmentLink").attr("disabled", true);
                         $("#enterManualInfoContainer").text("{%trans%}All available questionnaires have been completed.{%endtrans%}");
                     };
