PEP8 fixes, fix profile_base.html

--- a/portal/templates/profile_base.html
+++ b/portal/templates/profile_base.html
@@ -34,83 +34,24 @@
   var profileObj = new Profile();
   {% if user and user.has_role(ROLE.PATIENT) %}var patientId = {{user.id}};{% endif %}
   $(document).ready(function(){
-    $(function () {
-        profileObj.initSection("birthday");
-        profileObj.initSection("locale");
-        profileObj.initSection("email");
-        profileObj.initSection("phone");
-        profileObj.initSection("altphone");
-        profileObj.initSection("resetpassword");
-        profileObj.initSection("timezone");
-        profileObj.initSection("deceased");
-        {% if user and user.has_role(ROLE.PATIENT) -%}
-          profileObj.initSection("patientreport");
-          profileObj.initSection("assessmentlist");
-        {%- endif %}
-        {% if (user and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.INTERVENTION_STAFF)) -%}
-          profileObj.initSection("auditlog");
-        {%- endif %}
-    });
-    /*
-     * Note, this attach loader indicator to element with the class data-loader-container,
-     * in order for this to work, the element needs to have an id attribute
-     */
-    setTimeout(function() {
-      $("#profileForm [data-loader-container]").each(function() {
-          var attachId = $(this).attr("id");
-          if (!hasValue(attachId)) return false;
-          getSaveLoaderDiv("profileForm", attachId);
-          var targetFields = $(this).find("input, select");
-          if (targetFields.length > 0) {
-            targetFields.each(function() {
-                if ($(this).attr("type") == "hidden") return false;
-                $(this).attr("data-save-container-id", attachId);
-                var triggerEvent = $(this).attr("data-trigger-event");
-                if (!hasValue(triggerEvent)) triggerEvent = $(this).attr("type") == "text" ? "blur" : "change";
-                $(this).on(triggerEvent, function(e) {
-                  e.stopPropagation();
-                  var valid = this.validity ? this.validity.valid : true;
-                  if (valid) {
-                    var hasError = false;
-                    if ($(this).attr("data-error-field")) {
-                      var customErrorField = $("#" + $(this).attr("data-error-field"));
-                      if (customErrorField.length > 0) {
-                        if (customErrorField.text() != "") hasError = true;
-                        else hasError = false;
-                      } else hasError = false;
-                    };
-                    if (!hasError && !$(this).attr("data-update-on-validated")) assembleContent.demo({{ user.id }},true, $(this));
-                  };
-                });
-            });
-          };
-      });
-
-      $("#profileForm .profile-item-container.editable").each(function() {
-          $(this).prepend('<button class="btn profile-item-edit-btn" data-text="{{_('EDIT')}}" aria-label="{{_('Edit Button')}}"></button>');
-      });
-
-      $("#profileForm .profile-item-edit-btn").each(function() {
-          $(this).on("click", function(e) {
-            e.preventDefault();
-            var container = $(this).closest(".profile-item-container");
-            container.toggleClass("edit");
-            $(this).attr("data-text", container.hasClass("edit") ? "{{_('DONE')}}": "{{_('EDIT')}}");
-            if (!container.hasClass("edit")) {
-                var sections = container.attr("data-sections") ? container.attr("data-sections").split(",") : false;
-                if (sections) {
-                    sections.forEach(function(sectionId) {
-                        var errorText = container.find(".error-icon").text();
-                        if (!hasValue(errorText) && fillViews[sectionId]) fillViews[sectionId]();
-                    });
-                }
-            };
-          });
-      });
-    }, 1000);
+    profileObj.initSection("birthday");
+    profileObj.initSection("locale");
+    profileObj.initSection("email");
+    profileObj.initSection("phone");
+    profileObj.initSection("altphone");
+    profileObj.initSection("resetpassword");
+    profileObj.initSection("timezone");
+    profileObj.initSection("deceased");
+    {% if user and user.has_role(ROLE.PATIENT) -%}
+      profileObj.initSection("patientreport");
+      profileObj.initSection("assessmentlist");
+    {%- endif %}
+    {% if (user and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.INTERVENTION_STAFF)) -%}
+      profileObj.initSection("auditlog");
+    {%- endif %}
     {% if user %}
+      profileObj.onSectionsDidLoad();
       tnthAjax.getDemo({{user.id}});
     {% endif %}
-
   });
 {% endblock %}
