use proper truenth base

--- a/portal/exercise_diet/templates/exercise_diet/diet.html
+++ b/portal/exercise_diet/templates/exercise_diet/diet.html
@@ -1,7 +1,9 @@
-{% extends 'exercise_diet/base.html' %}
-{% from "flask_user/_macros.html" import back_btn, footer %}
+{% extends "exercise_diet/base.html" %}
+{% block title %}{{super()}} {{_("Exercise and Diet")}}{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
-    {{ back_btn(PORTAL, _('Home')) }}
+<main class="main">
+    {{ super() }}
 
     {% for asset in assets %}
         {{ asset|safe }}
@@ -38,21 +40,9 @@
                         <button type="button" class="btn btn-secondary" data-dismiss="modal"><b>close</b><span>X</span></button>
                         {% endtrans %}
                     </div>
-                
                 </div>
             </div>
         </div>
-
     {% endfor %}
-
-{% endblock %}
-{% block footer %}
-{{footer(user=user)}}
-{% endblock %}
-{% block document_ready %}
-    {% if request.args.get("disableLinks", "") %}
-    $("document").ready(function() {
-        setTimeout("disableHeaderFooterLinks();", 1000);
-    });
-    {% endif %}
+</main>
 {% endblock %}
