--- a/portal/exercise_diet/templates/exercise_diet/exercise.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise.html
@@ -1,7 +1,7 @@
-{% extends 'exercise_diet/base.html' %}
-{% from "flask_user/_macros.html" import back_btn, footer %}
+{% extends "exercise_diet/base.html" %}
+{% block title %}{{super()}} {{_("Exercise and Diet")}}{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
-    {{ back_btn(PORTAL, _('Home')) }}
 
     {% for asset in assets %}
         {{ asset|safe }}
@@ -42,14 +42,4 @@
 
     {% endfor %}
 
-{% endblock %}
-{% block footer %}
-{{footer(user=user)}}
-{% endblock %}
-{% block document_ready %}
-    {% if request.args.get("disableLinks", "") %}
-    $("document").ready(function() {
-        setTimeout("disableHeaderFooterLinks();", 1000);
-    });
-    {% endif %}
 {% endblock %}
