--- a/portal/exercise_diet/templates/exercise_diet/recipes.html
+++ b/portal/exercise_diet/templates/exercise_diet/recipes.html
@@ -2,6 +2,8 @@
 {% block title %}{{super()}} {{_("Exercise and Diet")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
+<main class="main">
+    {{ super() }}
 
     {{ recipe_intro|safe }}
     <div id="Recipe-Accordions">
@@ -130,5 +132,5 @@
             </div>
         </div>
     </div>
-
+</main>
 {% endblock %}
