Fix typo TN-489

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -79,7 +79,7 @@
 
                 {# TODO - move to CMS. example - fb_google_info|safe #}
 
-                <p>{{_("We offer users the ability to create a unique account for TrueNTH or the option to use their Facebook or Google logins. Choosing to use Google of Facebook provide a few additional benefits to you:")}}</p>
+                <p>{{_("We offer users the ability to create a unique account for TrueNTH or the option to use their Facebook or Google logins. Choosing to use Facebook or Google provides a few additional benefits to you:")}}</p>
                 <ul>
                     <li>{{_("A single login - you don't need to remember multiple user names or passwords. Assuming you have an active login with Facebook or Google, logging into TrueNTH is as simple as clicking a single button.")}}</li>
                     <li>{{_("TrueNTH can automatically import basic profile information from those services, simplifying the amount of information you need to enter. This includes name, email address, birthdate and profile image.")}}</li>
