--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -14,7 +14,8 @@
     <script src="https://unpkg.com/i18next-browser-languagedetector@2.0.0/i18nextBrowserLanguageDetector.js"></script>
     <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/gil.css') }}"><!--[if lte IE 6]>
+    <link rel="stylesheet" href="{{ url_for('.static', filename='../../../gil/static/css/gil.css') }}">
+    <!--[if lte IE 6]>
     <style>#top, #bottom, #left, #right { display: none; }</style>
     <![endif]-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
