--- a/portal/exercise_diet/templates/exercise_diet/exercise.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise.html
@@ -1,5 +1,7 @@
 {% extends "exercise_diet/base.html" %}
 {% block main %}
+<main class="main">
+    {{ super() }}
 
     {% for asset in assets %}
         {{ asset|safe }}
@@ -37,7 +39,6 @@
                 </div>
             </div>
         </div>
-
     {% endfor %}
-
+</main>
 {% endblock %}
