--- a/portal/exercise_diet/templates/exercise_diet/index.html
+++ b/portal/exercise_diet/templates/exercise_diet/index.html
@@ -1,8 +1,11 @@
 {% extends "exercise_diet/base.html" %}
 {% block main %}
+<main class="main">
+    {{ super() }}
 
     {% for asset in assets %}
         {{ asset|safe }}
     {% endfor %}
 
+</main>
 {% endblock %}
